# persist_sql

./: .gitignore  README.md  Release_Notes.txt  connect_sql.ipynb  sample_notebook.ipynb
.github/workflows/: python-publish.yml
persist_sql/: README.md  pyproject.toml
persist_sql/persist_sql/: __init__.py
persistent_sql/: pyproject.toml
persistent_sql/persistent_sql/: __init__.py  main.py
persistent_sql/persistent_sql.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
persistentsql/: README.md  pyproject.toml
