[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persist_sql"
version = "0.1.0"
description = "Peristent SQLite Database using S3 on Cloud Workspaces"
authors = [{ name = "Siddharth Singh", email = "devsiddharthsingh5010@icloud.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [ "boto3","pandas","numpy"]

[tool.setuptools]
packages = ["persist_sql"]
