[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persistent_sql"
version = "0.2.0"
description = "Persistent SQLite Database using S3 on Cloud Workspaces"
authors = [{ name = "Siddharth Singh", email = "siddharthsingh5010@icloud.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [ "boto3","pandas","numpy"]

[tool.setuptools]
packages = ["persistent_sql"]
